--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pocketbase": "^0.21.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
